<resources>
    <string name="app_name">WebApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_dashboard">Dashboard</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_attendance">Attendance Records</string>
    <string name="nav_contact">Contact Admin</string>
    <string name="nav_logout">Logout</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
